fix uneven border of waving video

--- a/src/components/TextImage/TextMedia.module.css
+++ b/src/components/TextImage/TextMedia.module.css
@@ -35,6 +35,7 @@
 }
 
 .image {
+	border-bottom: 0.25em solid #fff;
   flex: 1 0 max-content;
 	padding-top: 0.5em;
 }
